--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,11 @@ android {
     }
 }
 
+ext {
+    anko_version = '0.10.4'
+    support_version = '27.0.2'
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
@@ -40,4 +45,6 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     implementation "org.jetbrains.anko:anko:$anko_version"
+
+    implementation "com.android.support:support-dynamic-animation:$support_version"
 }
