--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 'android-P'
     defaultConfig {
         applicationId "engineering.uxd.example.coordinator"
         minSdkVersion 16
@@ -36,15 +36,11 @@ ext {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support:design:$support_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation "com.android.support:cardview-v7:$support_version"
-
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-
     implementation "org.jetbrains.anko:anko:$anko_version"
-
     implementation "com.android.support:support-dynamic-animation:$support_version"
 }
