--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,16 +31,16 @@ android {
 
 ext {
     anko_version = '0.10.4'
-    support_version = '27.0.2'
+    support_version = '27.1.1'
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support:design:$support_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation "com.android.support:cardview-v7:$support_version"
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation "com.android.support:support-dynamic-animation:$support_version"
 }
