--- a/build.gradle
+++ b/build.gradle
@@ -18,15 +18,15 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.2.50'
-        gradle_version = '3.1.2'
+        kotlin_version = '1.3.10'
+        gradle_version = '3.3.0-beta04'
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
